--- a/homepage/homepage.component.html
+++ b/homepage/homepage.component.html
@@ -24,7 +24,6 @@
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"
       ><i class="fa fa-envelope"></i> CONTACT</a
     >
-
     <button class="w3-bar-item w3-button w3-hide-small" routerLink="/login">
       <i class="fa fa-envelope"></i>
       Login!
@@ -41,17 +40,20 @@
     <a href="#" class="w3-bar-item w3-button">SEARCH</a>
   </div>
 </div>
-<div class="bgimg-1 w3-display-container w3-opacity-min  " id="home">
-  <div class="w3-display-middle " style="white-space: nowrap">
+<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+  <div class="w3-display-middle" style="white-space: nowrap">
     <div
       class="w3-center w3-padding-large w3-black w3-xlarge w3-wide animate__fadeInUp"
-      >IKUBINFO <span class="w3-hide-small">BOOKS</span> STORE
+    >
+      IKUBINFO <span class="w3-hide-small">BOOKS</span> STORE
     </div>
   </div>
 </div>
-<div class="w3-content w3-container w3-padding-64 " id="about">
+<div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center animate__backInLeft">ABOUT BOOKS</h3>
-  <p class="w3-center animate__backInRight "><em>Different Genres of Books</em></p>
+  <p class="w3-center animate__backInRight">
+    <em>Different Genres of Books</em>
+  </p>
   <p>
     There are different genres of books available for book readers. Every day,
     thousands of books are released in the market ranging from travel books to
@@ -110,7 +112,7 @@
         (click)="openIt()"
         class="w3-bar-item w3-button w3-hide-small w3-right w3-hover"
       >
-        <div class="container" style="padding: 8px 98px">
+        <div class="container" style="padding: 7px 8px">
           <h1>Search Every BooK!</h1>
         </div>
       </div>
@@ -118,7 +120,7 @@
   </div>
 </div>
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">Why are books important?</h3>
+  <h2 class="w3-center">Why are books important?</h2>
   <p class="w3-center">
     <em
       >Books are of great importance to mankind. They enhance our knowledge and
@@ -129,82 +131,190 @@
   <br />
 
   <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
-      <img
-        src="https://images.unsplash.com/photo-1584477932706-76755f0dbda7?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Ym9vayUyMHF1b3Rlc3xlbnwwfHwwfHw%3D&amp;w=1000&amp;q=80"
-        style="width: 100%"
-        style="height: 282px"
-        class="w3-hover-opacity"
-      />
-    </div>
+    <div class="wrapper">
+      <h1>What Librarian Offers</h1>
+      <div class="cols">
+        <div class="col" ontouchstart="this.classList.toggle('hover');">
+          <div class="container">
+            <div
+              class="front"
+              style="background-image: url(https://unsplash.it/500/500/)"
+            >
+              <div class="inner">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+              </div>
+            </div>
+            <div class="back">
+              <div class="inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Alias cum repellat velit quae suscipit c.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col" ontouchstart="this.classList.toggle('hover');">
+          <div class="container">
+            <div
+              class="front"
+              style="background-image: url(https://unsplash.it/500/500/)"
+            >
+              <div class="inner">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+              </div>
+            </div>
+            <div class="back">
+              <div class="inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Alias cum repellat velit quae suscipit c.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col" ontouchstart="this.classList.toggle('hover');">
+          <div class="container">
+            <div
+              class="front"
+              style="background-image: url(https://unsplash.it/500/500/)"
+            >
+              <div class="inner">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+              </div>
+            </div>
+            <div class="back">
+              <div class="inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Alias cum repellat velit quae suscipit c.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
 
-    <div class="w3-col m3">
-      <img
-        src="https://i.pinimg.com/736x/c8/e7/a0/c8e7a03a68ff92279ee033b2e3a48a00.jpg"
-        style="width: 100%"
-        style="height: 282px"
-        class="w3-hover-opacity"
-      />
-    </div>
-
-    <div class="w3-col m3">
-      <img
-        src="https://i.pinimg.com/originals/09/29/aa/0929aa43410270228f41668a4f8baa0f.jpg"
-        style="width: 100%"
-        style="height: 282px"
-        class="w3-hover-opacity"
-      />
-    </div>
-
-    <div class="w3-col m3">
-      <img
-        src="https://i.pinimg.com/736x/15/62/4d/15624d698e984af8c90ddbfd2b8ff0f9.jpg"
-        style="width: 100%"
-        style="height: 282px"
-        class="w3-hover-opacity"
-      />
+        <div class="col" ontouchstart="this.classList.toggle('hover');">
+          <div class="container">
+            <div
+              class="front"
+              style="background-image: url(https://unsplash.it/500/500/)"
+            >
+              <div class="inner">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+              </div>
+            </div>
+            <div class="back">
+              <div class="inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Alias cum repellat velit quae suscipit c.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img
-        src="https://i.pinimg.com/originals/09/29/aa/0929aa43410270228f41668a4f8baa0f.jpg"
-        style="width: 100%"
-        style="height: 282px"
-        class="w3-hover-opacity"
-      />
-    </div>
+  <div class="w3-row-padding w3-center">
+    <div class="wrapper">
+      <div class="cols">
+        <div class="col" ontouchstart="this.classList.toggle('hover');">
+          <div class="container">
+            <div
+              class="front"
+              style="background-image: url(https://unsplash.it/500/500/)"
+            >
+              <div class="inner">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+              </div>
+            </div>
+            <div class="back">
+              <div class="inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Alias cum repellat velit quae suscipit c.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col" ontouchstart="this.classList.toggle('hover');">
+          <div class="container">
+            <div
+              class="front"
+              style="background-image: url(https://unsplash.it/500/500/)"
+            >
+              <div class="inner">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+              </div>
+            </div>
+            <div class="back">
+              <div class="inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Alias cum repellat velit quae suscipit c.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col" ontouchstart="this.classList.toggle('hover');">
+          <div class="container">
+            <div
+              class="front"
+              style="background-image: url(https://unsplash.it/500/500/)"
+            >
+              <div class="inner">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+              </div>
+            </div>
+            <div class="back">
+              <div class="inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Alias cum repellat velit quae suscipit c.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
 
-    <div class="w3-col m3">
-      <img
-        src="https://i.pinimg.com/736x/cb/af/2d/cbaf2dc8957394ab617008eab14b6218.jpg"
-        style="width: 100%"
-        style="height: 282px"
-        class="w3-hover-opacity"
-      />
-    </div>
-
-    <div class="w3-col m3">
-      <img
-        src="https://i.pinimg.com/736x/81/d7/ae/81d7ae721b07cb5f775415026a9b3c5c.jpg"
-        style="width: 100%"
-        style="height: 282px"
-        class="w3-hover-opacity"
-      />
-    </div>
-
-    <div class="w3-col m3">
-      <img
-        src="https://i.pinimg.com/736x/9a/64/6a/9a646ada0a6534aaf4941feeb546fd4d.jpg"
-        style="width: 100%"
-        style="height: 282px"
-        class="w3-hover-opacity"
-      />
+        <div class="col" ontouchstart="this.classList.toggle('hover');">
+          <div class="container">
+            <div
+              class="front"
+              style="background-image: url(https://unsplash.it/500/500/)"
+            >
+              <div class="inner">
+                <p>Diligord</p>
+                <span>Lorem ipsum</span>
+              </div>
+            </div>
+            <div class="back">
+              <div class="inner">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Alias cum repellat velit quae suscipit c.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE I WORK</h3>
 
@@ -302,7 +412,6 @@
     </div>
   </div>
 </div>
-
 <footer
   class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off"
 >
