--- a/homepage/search-modal/search-modal.component.html
+++ b/homepage/search-modal/search-modal.component.html
@@ -1,10 +1,15 @@
-<div class="container" style="margin-top: 10%">
+
+<div class="container" style="margin-top: 10%" >
   <div class="col-md-6 col-md-offset-3">
     <div class="row">
       <div id="logo" class="text-center">
         <h1>Search Every BooK!</h1>
         <br />
-        <p>Here You Will Find The Description Of The Book!</p>
+        <p bold="true">
+          Dear Student, Here you will be in able to find every book with description.
+          If our library does not support it but you wat to get that book, Please send
+          us an email . Thank You !
+        </p>
       </div>
       <form role="form" id="form-buscar" [formGroup]="form">
         <mat-form-field class="example-full-width" appearance="fill">
